--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "heroku": "^7.65.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "shortid": "^2.2.16"
   }
 }
